Fix z-index issues with autocomplete box by having separate layouts for mobile and desktop view

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,107 +5,102 @@
     margin: 0;
     display: grid;
     grid-template-columns: 25rem auto auto;
-    grid-template-rows: auto auto auto 1fr;
+    grid-template-rows: 100%;
     justify-content: space-between;
     overflow: auto;
 }
 .map {
     grid-column: 1 / span 3;
-    grid-row: 1 / span 4;
+    grid-row: 1 / span 1;
 }
 
 .sidebar {
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
-    margin: 0.5rem 0.5rem 0 0.5rem;
-    border-radius: 0.5rem 0.5rem 0 0 ;
-    background-color: white;
+    background-color: transparent;
+    pointer-events: none;
     z-index: 1;
+    align-self: stretch;
+}
+
+.sidebarContent {
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.5rem;
+    background-color: white;
+    max-height: calc(100% - 2 * 0.5rem);
+    margin: 0.5rem;
+
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+    pointer-events: all;
 }
 
 .routingResult {
-    grid-column: 1 / span 1;
-    grid-row: 2 / span 1;
-    z-index: 1;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
-    background-color: white;
-    margin: 0 0.5rem;
     overflow: auto;
 }
 
 .mapOptions {
     grid-column: 3 / span 1;
-    grid-row: 1 / span 2;
-    background-color: transparent;
+    grid-row: 1 / span 1;
+    align-self: start;
     z-index: 1;
-    pointer-events: none; /* let the user click on the map where the sidebar is transparent */
-}
-
-.poweredBy {
-    grid-column: 1 / span 1;
-    grid-row: 3 / span 1;
-    z-index: 1;
-    background-color: white;
-    margin: 0 0.5rem 0.5rem;
-    border-radius: 0 0 0.5rem 0.5rem;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
-}
-
-.mapOptionsContent {
     display: flex;
     margin: 0.5rem;
-    pointer-events: all; /* we want all the content to behave normally*/
+    padding: 0.5rem;
     background-color: white;
     border-radius: 0.5rem;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1)
+}
+
+.smallScreenMap {
+    grid-row: 1 / span 3;
+    grid-column: 1 / span 1;
+}
+
+.smallScreenSidebar {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
+    margin: 0;
+    border-radius: 0;
+    z-index: 3;
+}
+
+.smallScreenMapOptions {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
+    justify-self: end;
+    z-index: 1;
+    background-color: transparent;
+    pointer-events: none;
+}
+
+.smallScreenMapOptionsContent {
+    background-color: white;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    pointer-events: all;
+}
+
+.smallScreenRoutingResult {
+    grid-row: 4 / span 1;
+    grid-column: 1 / span 1;
+    margin: 0;
+    z-index: 2;
+    background-color: white;
+}
+
+.smallSreenPoweredBy {
+    grid-row: 5 / span 1;
+    grid-column: 1 / span 1;
+    margin: 0;
+    border-radius: 0;
+    z-index: 2;
 }
 
 @media (max-width: 44rem) {
     .appWrapper {
         grid-template-columns: 100%;
         grid-template-rows: auto 0 1fr auto auto;
-    }
-
-    .map {
-        grid-row: 1 / span 3;
-        grid-column: 1 / span 1;
-    }
-
-    .sidebar {
-        grid-row: 1 / span 1;
-        grid-column: 1 / span 1;
-        margin: 0;
-        border-radius: 0;
-        z-index: 3;
-        box-shadow: none;
-    }
-
-    .mapOptions {
-        grid-row: 2 / span 1;
-        grid-column: 1 / span 1;
-        justify-self: end;
-        box-shadow: none;
-    }
-
-    .mapOptionsContent {
-        box-shadow: none;
-    }
-
-    .routingResult {
-        grid-row: 4 / span 1;
-        grid-column: 1 / span 1;
-        margin: 0;
-        z-index: 2;
-        box-shadow: none;
-    }
-
-    .poweredBy {
-        grid-row: 5 / span 1;
-        grid-column: 1 / span 1;
-        margin: 0;
-        border-radius: 0;
-        z-index: 2;
-        box-shadow: none;
     }
 }
