--- a/src/sidebar/ErrorMessage.module.css
+++ b/src/sidebar/ErrorMessage.module.css
@@ -6,7 +6,7 @@
     color: white;
     margin: 0.5rem;
     padding: 0.5rem;
-    border-radius: 2px;
+    border-radius: 0.3rem;
 }
 
 .errorMessage {
